6/10/2010 Converted RecordAndPlaybackModel to use time parameter instead of playback indices
6/10/2010 Fixed: Record and playback timeline doesn't synchronize size at the right time (seems one behind); When switching back and forth tabs in moving man, the playback timeline changes size.
5/31/2010 Fixed a bug that caused charts in motion-series only to clear after clearing the model twice.
5/17/2010 document public API, refactor, simplify constructor
5/13/2010 Started initial port of recording-and-playback system from trunk/simulations-java/common/scala-common/scala-src/edu/colorado/phet/scalacommon/record, see #2092